--- a/expensivefootwear.html
+++ b/expensivefootwear.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-    <link rel="Css" href="Css.css" />
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="/Style.css" />
 </head>
 <h1>
     The world's top 5 priciest footwear
