--- a/expensivefootwear.html
+++ b/expensivefootwear.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/Style.css" />
+    <link rel="stylesheet" type="text/css" href="Style.css" />
 </head>
 <h1>
     The world's top 5 priciest footwear
