--- a/expensivefootwear.html
+++ b/expensivefootwear.html
@@ -36,13 +36,30 @@
 </h1>
 
 <p>
-    Rock 'Em 1 0f 1 socks - 5000 Dollars
+    1. Rock 'Em 1 0f 1 socks - 5000 Dollars
 </p>
 
 <p>
-    The Cervelt Sock from Harrys of London - 1500 Dollars
+    2. The Cervelt Sock from Harrys of London - 1500 Dollars
 </p>
 
+<p>
+    3. Falke - 1188 Dollars
+</p>
+
+<p>
+    4. Luis Vuitton Socks - 200-600 Dollars
+</p>
+
+<p>
+    5. Balenciaga socks 200-400 Dollars
+</p>
+
+<img src = "https://rockemsocks.com/cdn/shop/products/ps_3_1024x1024.jpg?v=1687193469" alt = "sock 1">
+<img src = "https://cdn.shopify.com/s/files/1/0286/9104/products/Cervelt_1481A.jpg?v=1386358068" alt = "sock 2">
+<img src = "https://i.guim.co.uk/img/static/sys-images/Guardian/Pix/pictures/2014/10/28/1414506296756/4023a960-276b-462d-8aa0-2f6772e96497-2060x1705.jpeg?width=700&quality=85&auto=format&fit=max&s=b51f036767f7a9c5898cf059e51363bb" alt = "sock 3">
+<img src = "https://encrypted-tbn2.gstatic.com/shopping?q=tbn:ANd9GcQczfqffFd4uWC8GWgvbvMkdfvAnfcU18_Hkx29vJTj0_IhkJ5Iqhrpt1mCx4P1xk-8KXY7SXuWPf_jUt12yb0dXcSQwXI7tcgY8RekLX6FsQWLWXyk2x2xUQ" alt = "sock 4">
+<img src = "https://i.pinimg.com/564x/8b/f7/04/8bf704d00673c54194225e69a26d6dad.jpg" alt = "sock 5">
 </body>
 
 </html>
