--- a/expensivefootwear.html
+++ b/expensivefootwear.html
@@ -40,6 +40,10 @@
     5. Harry Winston Ruby slippers - 3 Million dollars
 </p>
 <img src = "https://static.wixstatic.com/media/41a4b8_12e8e6dd17174a4e8ef5356f182519dc~mv2.jpg/v1/fill/w_640,h_430,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/41a4b8_12e8e6dd17174a4e8ef5356f182519dc~mv2.jpg" alt = "shoes 5">
+<p></p>
+<a href="Website.html">Top 5 socks</a>
+
+<!--
 <h1>
     The world's top 5 priciest socks
 </h1>
@@ -74,6 +78,7 @@
 <p>
     <img src = "https://i.pinimg.com/564x/8b/f7/04/8bf704d00673c54194225e69a26d6dad.jpg" alt = "sock 5">
 </p>
+-->
 
 </body>
 
