--- a/expensivefootwear.html
+++ b/expensivefootwear.html
@@ -70,5 +70,5 @@
     <img src = "https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSOLEX4L7CmBNExla0x_XVpmgvffcC7Gkn1UNepLDYH360HiZ5I5yDbNvgXS1G2kryvMrK2cmh8e8Vf_XcYqp3Z3fxkoL2LX92WvFzVcTgvj8RoahY8U1-ivJU" alt = "shoe 5">
 </div>
 </body>
-<a href="Website.html">Top 5 socks</a>
+<a href="Website.html">Top 5 most expensive socks</a>
 </html>
