--- a/3rd_page.html
+++ b/3rd_page.html
@@ -5,7 +5,7 @@
     </head>
     <h1>
        <p>
-        Top 5 Most expensive slippers
+        The world's top 5 priciest slippers
        </p>
     </h1>
 
