--- a/Website.html
+++ b/Website.html
@@ -40,5 +40,5 @@
         <img src = "https://i.pinimg.com/564x/8b/f7/04/8bf704d00673c54194225e69a26d6dad.jpg" alt = "sock 5">
     </p>
     </body>
-    <a href="expensivefootwear.html">Back to the first page</a>
+    <a href="expensivefootwear.html" class="page_1">Back to the first page</a>
 </html>
