--- a/expensivefootwear.html
+++ b/expensivefootwear.html
@@ -39,11 +39,11 @@
 <p>
     5. Harry Winston Ruby slippers - 3 Million dollars
 </p>
-</div>
+<p>
 <img src = "https://static.wixstatic.com/media/41a4b8_12e8e6dd17174a4e8ef5356f182519dc~mv2.jpg/v1/fill/w_640,h_430,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/41a4b8_12e8e6dd17174a4e8ef5356f182519dc~mv2.jpg" alt = "shoes 5">
-<p></p>
-
+</p>
+</div>
 </body>
-<a href="Website.html">Top 5 most expensive socks</a>
-<a href="3rd_page.html">Top 5 slippers</a>
+<a href="Website.html" class="page_2">Top 5 most expensive socks</a>
+<a href="3rd_page.html"class="page_3">Top 5 slippers</a>
 </html>
