--- a/3rd_page.html
+++ b/3rd_page.html
@@ -15,26 +15,35 @@
         <p>
             Stuart Weitzman Cinderella Slippers - 1 million Dollars
         </p>
+        <p>
         <img src = "https://prnewswire2-a.akamaihd.net/p/1893751/sp/189375100/thumbnail/entry_id/0_hlu17py9/def_height/2700/def_width/2700/version/100012/type/1" alt = "slipper 1">
+        </p>
         <p>
              UGG Tasman Slipper Palace - 2725 Dollars
         </p>
+        <p>
         <img src = "https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcShWFK0600sIP4dCuppNApNYjvTmFBq2Sd3r8CqP3DfHJyn8BZazjxqqf2LUU5AzxGnVymRovgTEG1A_u5qRBtnXJe27JM4k0voEaM1zxdPu9wepzV58Axe2A" alt = "slipper 2">
-       
+        </p>
         <p>
             Gucci Black Crocodile Alligator Leather Fur Slippers - 2091 dollars
         </p>
-        <img src = "https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcRBKKE71QU8dLE0I6j-vrAc3qGm63vmr3A5oQB3xnkXgkxA1r2ktGGHNIOWxSq6L2dqfg3oPUj0byAv__RzzTsNj9LTdeDhPOcAVcC_JYlnVkIq5BdduzPWUw" alt = "slipper 3">
-           <p>
-               LV Palace Slipper - 1110 Dollars
-           </p>
-        <img src = "https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcQpW8TjuZEwUw4DHKLyz-_sDaAXu2KOO6aWfkKkSpGLaMXZcHaUzXqtWGh17JX3Y9L8cEs8lZJT-lJNM-mAy8nFk2NTbshu2tZq_okZlNAISKmv0q0uneBhmWAL" alt = "slipper 4">
         <p>
+        <img src = "https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcRBKKE71QU8dLE0I6j-vrAc3qGm63vmr3A5oQB3xnkXgkxA1r2ktGGHNIOWxSq6L2dqfg3oPUj0byAv__RzzTsNj9LTdeDhPOcAVcC_JYlnVkIq5BdduzPWUw" alt = "slipper 3">
+        </p>
+        <p>
+               LV Palace Slipper - 1110 Dollars
+            </p>
+        <p>
+            <img src = "https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcQpW8TjuZEwUw4DHKLyz-_sDaAXu2KOO6aWfkKkSpGLaMXZcHaUzXqtWGh17JX3Y9L8cEs8lZJT-lJNM-mAy8nFk2NTbshu2tZq_okZlNAISKmv0q0uneBhmWAL" alt = "slipper 4">
+        </p>
+            <p>
             UGG Tasman Slipper Gallery Dept - 799 Dollars
     
         </p>
+        <p>
         <img src = "https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcSOLEX4L7CmBNExla0x_XVpmgvffcC7Gkn1UNepLDYH360HiZ5I5yDbNvgXS1G2kryvMrK2cmh8e8Vf_XcYqp3Z3fxkoL2LX92WvFzVcTgvj8RoahY8U1-ivJU" alt = "shoe 5">
+        </p>
     </div>
     </body>
-    <a href="expensivefootwear.html">Back to the first page</a>
+    <a href="expensivefootwear.html" class="page_1">Back to the first page</a>
 </html>
